# packages/ecommerce-server/public/swagger.json
@@ -786,165 +786,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"DimensionsRes": {
-				"properties": {
-					"length": {
-						"type": "string"
-					},
-					"width": {
-						"type": "string"
-					},
-					"height": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"length",
-					"width",
-					"height"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"CategoryRes": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"name": {
-						"type": "string"
-					},
-					"slug": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"id",
-					"name",
-					"slug"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"TagRes": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"name": {
-						"type": "string"
-					},
-					"slug": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"id",
-					"name",
-					"slug"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ImageRes": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"date_created": {
-						"type": "string"
-					},
-					"date_created_gmt": {
-						"type": "string"
-					},
-					"date_modified": {
-						"type": "string"
-					},
-					"date_modified_gmt": {
-						"type": "string"
-					},
-					"src": {
-						"type": "string"
-					},
-					"name": {
-						"type": "string"
-					},
-					"alt": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"id",
-					"date_created",
-					"date_created_gmt",
-					"date_modified",
-					"date_modified_gmt",
-					"src",
-					"name",
-					"alt"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"AttributeRes": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"name": {
-						"type": "string"
-					},
-					"position": {
-						"type": "number",
-						"format": "double"
-					},
-					"visible": {
-						"type": "boolean"
-					},
-					"variation": {
-						"type": "boolean"
-					},
-					"options": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"id",
-					"name",
-					"position",
-					"visible",
-					"variation",
-					"options"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"MetaDaumRes": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"key": {
-						"type": "string"
-					},
-					"value": {}
-				},
-				"required": [
-					"id",
-					"key",
-					"value"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"Self": {
 				"properties": {
 					"href": {
@@ -1010,7 +851,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"WoocommerceProductRes": {
+			"WoocomerceShippingZone": {
 				"properties": {
 					"id": {
 						"type": "number",
@@ -1019,223 +860,9 @@
 					"name": {
 						"type": "string"
 					},
-					"slug": {
-						"type": "string"
-					},
-					"permalink": {
-						"type": "string"
-					},
-					"date_created": {
-						"type": "string"
-					},
-					"date_created_gmt": {
-						"type": "string"
-					},
-					"date_modified": {
-						"type": "string"
-					},
-					"date_modified_gmt": {
-						"type": "string"
-					},
-					"type": {
-						"type": "string"
-					},
-					"status": {
-						"type": "string"
-					},
-					"featured": {
-						"type": "boolean"
-					},
-					"catalog_visibility": {
-						"type": "string"
-					},
-					"description": {
-						"type": "string"
-					},
-					"short_description": {
-						"type": "string"
-					},
-					"sku": {
-						"type": "string"
-					},
-					"price": {
-						"type": "string"
-					},
-					"regular_price": {
-						"type": "string"
-					},
-					"sale_price": {
-						"type": "string"
-					},
-					"date_on_sale_from": {},
-					"date_on_sale_from_gmt": {},
-					"date_on_sale_to": {},
-					"date_on_sale_to_gmt": {},
-					"price_html": {
-						"type": "string"
-					},
-					"on_sale": {
-						"type": "boolean"
-					},
-					"purchasable": {
-						"type": "boolean"
-					},
-					"total_sales": {
+					"order": {
 						"type": "number",
 						"format": "double"
-					},
-					"virtual": {
-						"type": "boolean"
-					},
-					"downloadable": {
-						"type": "boolean"
-					},
-					"downloads": {
-						"items": {},
-						"type": "array"
-					},
-					"download_limit": {
-						"type": "number",
-						"format": "double"
-					},
-					"download_expiry": {
-						"type": "number",
-						"format": "double"
-					},
-					"external_url": {
-						"type": "string"
-					},
-					"button_text": {
-						"type": "string"
-					},
-					"tax_status": {
-						"type": "string"
-					},
-					"tax_class": {
-						"type": "string"
-					},
-					"manage_stock": {
-						"type": "boolean"
-					},
-					"stock_quantity": {},
-					"stock_status": {
-						"type": "string"
-					},
-					"backorders": {
-						"type": "string"
-					},
-					"backorders_allowed": {
-						"type": "boolean"
-					},
-					"backordered": {
-						"type": "boolean"
-					},
-					"sold_individually": {
-						"type": "boolean"
-					},
-					"weight": {
-						"type": "string"
-					},
-					"dimensions": {
-						"$ref": "#/components/schemas/DimensionsRes"
-					},
-					"shipping_required": {
-						"type": "boolean"
-					},
-					"shipping_taxable": {
-						"type": "boolean"
-					},
-					"shipping_class": {
-						"type": "string"
-					},
-					"shipping_class_id": {
-						"type": "number",
-						"format": "double"
-					},
-					"reviews_allowed": {
-						"type": "boolean"
-					},
-					"average_rating": {
-						"type": "string"
-					},
-					"rating_count": {
-						"type": "number",
-						"format": "double"
-					},
-					"related_ids": {
-						"items": {
-							"type": "number",
-							"format": "double"
-						},
-						"type": "array"
-					},
-					"upsell_ids": {
-						"items": {},
-						"type": "array"
-					},
-					"cross_sell_ids": {
-						"items": {},
-						"type": "array"
-					},
-					"parent_id": {
-						"type": "number",
-						"format": "double"
-					},
-					"purchase_note": {
-						"type": "string"
-					},
-					"categories": {
-						"items": {
-							"$ref": "#/components/schemas/CategoryRes"
-						},
-						"type": "array"
-					},
-					"tags": {
-						"items": {
-							"$ref": "#/components/schemas/TagRes"
-						},
-						"type": "array"
-					},
-					"images": {
-						"items": {
-							"$ref": "#/components/schemas/ImageRes"
-						},
-						"type": "array"
-					},
-					"attributes": {
-						"items": {
-							"$ref": "#/components/schemas/AttributeRes"
-						},
-						"type": "array"
-					},
-					"default_attributes": {
-						"items": {},
-						"type": "array"
-					},
-					"variations": {
-						"items": {
-							"type": "number",
-							"format": "double"
-						},
-						"type": "array"
-					},
-					"grouped_products": {
-						"items": {},
-						"type": "array"
-					},
-					"menu_order": {
-						"type": "number",
-						"format": "double"
-					},
-					"meta_data": {
-						"items": {
-							"$ref": "#/components/schemas/MetaDaumRes"
-						},
-						"type": "array"
-					},
-					"jetpack_publicize_connections": {
-						"items": {},
-						"type": "array"
 					},
 					"_links": {
 						"$ref": "#/components/schemas/Links"
@@ -1244,80 +871,17 @@
 				"required": [
 					"id",
 					"name",
-					"slug",
-					"permalink",
-					"date_created",
-					"date_created_gmt",
-					"date_modified",
-					"date_modified_gmt",
-					"type",
-					"status",
-					"featured",
-					"catalog_visibility",
-					"description",
-					"short_description",
-					"sku",
-					"price",
-					"regular_price",
-					"sale_price",
-					"date_on_sale_from",
-					"date_on_sale_from_gmt",
-					"date_on_sale_to",
-					"date_on_sale_to_gmt",
-					"price_html",
-					"on_sale",
-					"purchasable",
-					"total_sales",
-					"virtual",
-					"downloadable",
-					"downloads",
-					"download_limit",
-					"download_expiry",
-					"external_url",
-					"button_text",
-					"tax_status",
-					"tax_class",
-					"manage_stock",
-					"stock_quantity",
-					"stock_status",
-					"backorders",
-					"backorders_allowed",
-					"backordered",
-					"sold_individually",
-					"weight",
-					"dimensions",
-					"shipping_required",
-					"shipping_taxable",
-					"shipping_class",
-					"shipping_class_id",
-					"reviews_allowed",
-					"average_rating",
-					"rating_count",
-					"related_ids",
-					"upsell_ids",
-					"cross_sell_ids",
-					"parent_id",
-					"purchase_note",
-					"categories",
-					"tags",
-					"images",
-					"attributes",
-					"default_attributes",
-					"variations",
-					"grouped_products",
-					"menu_order",
-					"meta_data",
-					"jetpack_publicize_connections",
+					"order",
 					"_links"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"DGLResponse_WoocommerceProductRes-Array_": {
+			"DGLResponse_WoocomerceShippingZone-Array_": {
 				"properties": {
 					"data": {
 						"items": {
-							"$ref": "#/components/schemas/WoocommerceProductRes"
+							"$ref": "#/components/schemas/WoocomerceShippingZone"
 						},
 						"type": "array"
 					},
@@ -1578,7 +1142,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/DGLResponse_WoocommerceProductRes-Array_"
+									"$ref": "#/components/schemas/DGLResponse_WoocomerceShippingZone-Array_"
 								}
 							}
 						}
