# packages/ecommerce-server/src/routes/routes.ts
@@ -272,74 +272,6 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "DimensionsRes": {
-        "dataType": "refObject",
-        "properties": {
-            "length": {"dataType":"string","required":true},
-            "width": {"dataType":"string","required":true},
-            "height": {"dataType":"string","required":true},
-        },
-        "additionalProperties": false,
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "CategoryRes": {
-        "dataType": "refObject",
-        "properties": {
-            "id": {"dataType":"double","required":true},
-            "name": {"dataType":"string","required":true},
-            "slug": {"dataType":"string","required":true},
-        },
-        "additionalProperties": false,
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "TagRes": {
-        "dataType": "refObject",
-        "properties": {
-            "id": {"dataType":"double","required":true},
-            "name": {"dataType":"string","required":true},
-            "slug": {"dataType":"string","required":true},
-        },
-        "additionalProperties": false,
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "ImageRes": {
-        "dataType": "refObject",
-        "properties": {
-            "id": {"dataType":"double","required":true},
-            "date_created": {"dataType":"string","required":true},
-            "date_created_gmt": {"dataType":"string","required":true},
-            "date_modified": {"dataType":"string","required":true},
-            "date_modified_gmt": {"dataType":"string","required":true},
-            "src": {"dataType":"string","required":true},
-            "name": {"dataType":"string","required":true},
-            "alt": {"dataType":"string","required":true},
-        },
-        "additionalProperties": false,
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "AttributeRes": {
-        "dataType": "refObject",
-        "properties": {
-            "id": {"dataType":"double","required":true},
-            "name": {"dataType":"string","required":true},
-            "position": {"dataType":"double","required":true},
-            "visible": {"dataType":"boolean","required":true},
-            "variation": {"dataType":"boolean","required":true},
-            "options": {"dataType":"array","array":{"dataType":"string"},"required":true},
-        },
-        "additionalProperties": false,
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "MetaDaumRes": {
-        "dataType": "refObject",
-        "properties": {
-            "id": {"dataType":"double","required":true},
-            "key": {"dataType":"string","required":true},
-            "value": {"dataType":"any","required":true},
-        },
-        "additionalProperties": false,
-    },
-    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "Self": {
         "dataType": "refObject",
         "properties": {
@@ -374,84 +306,21 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "WoocommerceProductRes": {
+    "WoocomerceShippingZone": {
         "dataType": "refObject",
         "properties": {
             "id": {"dataType":"double","required":true},
             "name": {"dataType":"string","required":true},
-            "slug": {"dataType":"string","required":true},
-            "permalink": {"dataType":"string","required":true},
-            "date_created": {"dataType":"string","required":true},
-            "date_created_gmt": {"dataType":"string","required":true},
-            "date_modified": {"dataType":"string","required":true},
-            "date_modified_gmt": {"dataType":"string","required":true},
-            "type": {"dataType":"string","required":true},
-            "status": {"dataType":"string","required":true},
-            "featured": {"dataType":"boolean","required":true},
-            "catalog_visibility": {"dataType":"string","required":true},
-            "description": {"dataType":"string","required":true},
-            "short_description": {"dataType":"string","required":true},
-            "sku": {"dataType":"string","required":true},
-            "price": {"dataType":"string","required":true},
-            "regular_price": {"dataType":"string","required":true},
-            "sale_price": {"dataType":"string","required":true},
-            "date_on_sale_from": {"dataType":"any","required":true},
-            "date_on_sale_from_gmt": {"dataType":"any","required":true},
-            "date_on_sale_to": {"dataType":"any","required":true},
-            "date_on_sale_to_gmt": {"dataType":"any","required":true},
-            "price_html": {"dataType":"string","required":true},
-            "on_sale": {"dataType":"boolean","required":true},
-            "purchasable": {"dataType":"boolean","required":true},
-            "total_sales": {"dataType":"double","required":true},
-            "virtual": {"dataType":"boolean","required":true},
-            "downloadable": {"dataType":"boolean","required":true},
-            "downloads": {"dataType":"array","array":{"dataType":"any"},"required":true},
-            "download_limit": {"dataType":"double","required":true},
-            "download_expiry": {"dataType":"double","required":true},
-            "external_url": {"dataType":"string","required":true},
-            "button_text": {"dataType":"string","required":true},
-            "tax_status": {"dataType":"string","required":true},
-            "tax_class": {"dataType":"string","required":true},
-            "manage_stock": {"dataType":"boolean","required":true},
-            "stock_quantity": {"dataType":"any","required":true},
-            "stock_status": {"dataType":"string","required":true},
-            "backorders": {"dataType":"string","required":true},
-            "backorders_allowed": {"dataType":"boolean","required":true},
-            "backordered": {"dataType":"boolean","required":true},
-            "sold_individually": {"dataType":"boolean","required":true},
-            "weight": {"dataType":"string","required":true},
-            "dimensions": {"ref":"DimensionsRes","required":true},
-            "shipping_required": {"dataType":"boolean","required":true},
-            "shipping_taxable": {"dataType":"boolean","required":true},
-            "shipping_class": {"dataType":"string","required":true},
-            "shipping_class_id": {"dataType":"double","required":true},
-            "reviews_allowed": {"dataType":"boolean","required":true},
-            "average_rating": {"dataType":"string","required":true},
-            "rating_count": {"dataType":"double","required":true},
-            "related_ids": {"dataType":"array","array":{"dataType":"double"},"required":true},
-            "upsell_ids": {"dataType":"array","array":{"dataType":"any"},"required":true},
-            "cross_sell_ids": {"dataType":"array","array":{"dataType":"any"},"required":true},
-            "parent_id": {"dataType":"double","required":true},
-            "purchase_note": {"dataType":"string","required":true},
-            "categories": {"dataType":"array","array":{"dataType":"refObject","ref":"CategoryRes"},"required":true},
-            "tags": {"dataType":"array","array":{"dataType":"refObject","ref":"TagRes"},"required":true},
-            "images": {"dataType":"array","array":{"dataType":"refObject","ref":"ImageRes"},"required":true},
-            "attributes": {"dataType":"array","array":{"dataType":"refObject","ref":"AttributeRes"},"required":true},
-            "default_attributes": {"dataType":"array","array":{"dataType":"any"},"required":true},
-            "variations": {"dataType":"array","array":{"dataType":"double"},"required":true},
-            "grouped_products": {"dataType":"array","array":{"dataType":"any"},"required":true},
-            "menu_order": {"dataType":"double","required":true},
-            "meta_data": {"dataType":"array","array":{"dataType":"refObject","ref":"MetaDaumRes"},"required":true},
-            "jetpack_publicize_connections": {"dataType":"array","array":{"dataType":"any"},"required":true},
+            "order": {"dataType":"double","required":true},
             "_links": {"ref":"Links","required":true},
         },
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "DGLResponse_WoocommerceProductRes-Array_": {
+    "DGLResponse_WoocomerceShippingZone-Array_": {
         "dataType": "refObject",
         "properties": {
-            "data": {"dataType":"array","array":{"dataType":"refObject","ref":"WoocommerceProductRes"},"required":true},
+            "data": {"dataType":"array","array":{"dataType":"refObject","ref":"WoocomerceShippingZone"},"required":true},
             "status": {"dataType":"double","required":true},
             "message": {"dataType":"string","required":true},
         },
